# licensing-demo

./: .bazelrc  .gitignore  MODULE.bazel  README.md
.github/workflows/: build.yml
docker/compose/: dependencies.yaml
keys/: private.pem  public.pem
scripts/: generate-keypair.sh
src/java/main/application/: BUILD.bazel  Main.java
src/java/main/application/config/kubernetes/: KubernetesConfig.java
src/java/main/application/config/licensing/: LicensingConfig.java
src/java/main/application/controller/: ControllerUiConfig.java
src/java/main/application/dto/: UiConfigDto.java
src/java/main/application/model/dto/: UiConfigDto.java
src/java/main/application/resources/: application.yaml
src/java/main/commons/: BUILD.bazel
src/java/main/commons/concurrency/: OverloadHandler.java
src/java/main/commons/utils/: HashingUtils.java  KubernetesUtils.java  RsaUtils.java  SerializationUtils.java
src/java/main/enforcer/: BUILD.bazel
src/java/main/enforcer/config/: LicensingEnforcerAutoConfig.java  LicensingEnforcerProps.java
src/java/main/enforcer/fingerprint/: Fingerprint.java  FingerprintGenerator.java  FingerprintHasher.java  FingerprintPropertiesProvider.java  FingerprintRepository.java  FingerprintResolver.java
src/java/main/enforcer/license/: License.java  LicenseValidationException.java  LicenseValidationFailureAnalyzer.java
src/java/main/issuer/: BUILD.bazel  Main.java
src/java/main/issuer/config/concurrency/: ConcurrencyConfig.java  SchedulersProvider.java
src/java/main/issuer/config/gcp/: GcpConfig.java
src/java/main/issuer/config/graphql/: GraphqlConfig.java
src/java/main/issuer/config/licensing/: LicensingConfig.java  LicensingProps.java  LicensingTemplate.java
src/java/main/issuer/controller/: ControllerLicences.java
src/java/main/issuer/model/dto/: DtoCreateLicensePayload.java  DtoLicense.java  DtoQuota.java  DtoSpecs.java
src/java/main/issuer/model/entity/: EntityLicense.java
src/java/main/issuer/model/repository/: RepositoryLicenses.java
src/java/main/issuer/model/service/: ServiceLicenses.java
src/java/main/issuer/resources/: application.yaml
src/java/main/issuer/resources/graphql/: schema.graphqls
src/java/test/application/: BUILD.bazel  MainTest.java
src/java/test/commons/: BUILD.bazel
src/java/test/commons/concurrency/: OverloadHandlerTest.java
src/java/test/commons/utils/: HashingUtilsTest.java  SerializationUtilsTest.java
src/java/test/issuer/: BUILD.bazel  MainTest.java
src/java/test/issuer/config/licensing/: LicensingTemplateTest.java
src/java/test/issuer/resources/: application-test.yaml
src/java/test/issuer/resources/keys/: private.pem  public.pem
