module(
    name = "demo",
    version = "0.0.0",
)

bazel_dep(name = "rules_oci", version = "2.2.6")
bazel_dep(name = "rules_java", version = "8.15.2")
bazel_dep(name = "rules_jvm_external", version = "6.8")
bazel_dep(name = "contrib_rules_jvm", version = "0.29.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.21.1")
bazel_dep(name = "container_structure_test", version = "1.19.1")
bazel_dep(name = "googleapis", version = "0.0.0-20250826-a92cee39")
bazel_dep(name = "protoc-gen-validate", version = "1.2.1.bcr.1")
bazel_dep(name = "googleapis-java", version = "1.0.0")

# --- maven
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "maven",
    artifacts = [

        # gcp
        "com.google.cloud:google-cloud-kms",

        # kubernetes client
        "io.kubernetes:client-java:24.0.0",

        # lombok
        "org.projectlombok:lombok",

        # spring
        "org.springframework.boot:spring-boot-starter-webflux",
        "org.springframework.boot:spring-boot-starter-test",
        "org.springframework.boot:spring-boot-autoconfigure",
        "org.springframework.boot:spring-boot-starter-graphql",
        "org.springframework.boot:spring-boot-starter-data-jpa",
        "org.springframework.boot:spring-boot-configuration-processor",

        # flyway
        "org.flywaydb:flyway-core:11.7.2",
        "org.flywaydb:flyway-mysql:11.7.2",

        # jdbc connector
        "com.mysql:mysql-connector-j:jar:9.4.0",

        # jdbc pool
        "io.agroal:agroal-spring-boot-starter:2.8",

        # graphql scalars
        "com.graphql-java:graphql-java-extended-scalars:24.0",

        # bouncy castle
        "org.bouncycastle:bcpg-jdk18on:1.81",
        "org.bouncycastle:bcprov-jdk18on:1.81",
        "org.bouncycastle:bcpkix-jdk18on:1.81",

        # reactor
        "io.projectreactor:reactor-core",
        "io.projectreactor:reactor-test",

        # junit 5 engine
        "org.junit.jupiter:junit-jupiter-api",
        "org.junit.jupiter:junit-jupiter-engine",

        # junit 5 platform
        "org.junit.platform:junit-platform-reporting:1.13.4",
        "org.junit.platform:junit-platform-console-standalone:1.13.4",
    ],
    boms = [
        # grpc
        "io.grpc:grpc-bom:1.66.0",

        # protobuf
        "com.google.protobuf:protobuf-bom:4.32.0",

        # junit 5
        "org.junit:junit-bom:5.13.4",

        # jackson
        "com.fasterxml.jackson:jackson-bom:2.20.0",

        # google sdk
        "com.google.cloud:libraries-bom:26.66.0",
        "com.google.cloud:spring-cloud-gcp-dependencies:7.3.0",

        # aws sdk
        "software.amazon.awssdk:bom:2.33.5",
        "io.awspring.cloud:spring-cloud-aws-dependencies:3.4.0",

        # spring
        "org.springframework.boot:spring-boot-dependencies:3.5.5",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")

# --- oci
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "java_base",
    digest = "sha256:f72ccbc829d530927f981a78434b481f4c953c8f7ad9ac2ecf400cb392f79e98",
    image = "gcr.io/distroless/java21-debian12",
    platforms = [
        "linux/amd64",
        "linux/arm64",
    ],
)
use_repo(oci, "java_base", "java_base_linux_amd64", "java_base_linux_arm64")
