load("@aspect_bazel_lib//lib:tar.bzl", "tar")
load("@container_structure_test//:defs.bzl", "container_structure_test")
load("@rules_java//java:defs.bzl", "java_binary", "java_library", "java_plugin")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push")

package(default_visibility = ["//visibility:public"])

java_plugin(
    name = "lombok_plugin",
    processor_class = "lombok.launch.AnnotationProcessorHider$AnnotationProcessor",
    deps = [
        "@maven//:org_projectlombok_lombok",
    ],
)

java_library(
    name = "enforcer_library",
    srcs = glob(["**/*.java"]),
    javacopts = [
        "-source",
        "21",
        "-target",
        "21",
    ],
    plugins = [":lombok_plugin"],
    resource_strip_prefix = "src/java/main/enforcer/resources",
    resources = glob(["resources/**"]),
    deps = [
        "//src/java/main/commons:commons_library",
        "@maven//:io_projectreactor_reactor_core",
        "@maven//:org_projectlombok_lombok",
        "@maven//:org_springframework_boot_spring_boot",
        "@maven//:org_springframework_boot_spring_boot_autoconfigure",
        "@maven//:org_springframework_boot_spring_boot_starter_web",
        "@maven//:org_springframework_spring_context",
        "@maven//:org_springframework_spring_core",
        "@maven//:org_springframework_spring_web",
    ],
)
