load("@contrib_rules_jvm//docs:stardoc-input.bzl", "java_test_suite")

java_test_suite(
    name = "tests",
    srcs = glob(["**/*.java"]),
    runner = "junit5",
    runtime_deps = [
        "@maven//:org_junit_jupiter_junit_jupiter_engine",
        "@maven//:org_junit_platform_junit_platform_launcher",
        "@maven//:org_junit_platform_junit_platform_reporting",
        "@maven//:org_yaml_snakeyaml",
    ],
    deps = [
        "//src/java/main/application:application_binary",
        "//src/java/main/commons:commons_library",
        "//src/java/main/enforcer:enforcer_library",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_springframework_boot_spring_boot_test",
        "@maven//:org_springframework_spring_test",
    ],
)
